--- a/overlay/frameworks/base/core/res/res/values/config.xml
+++ b/overlay/frameworks/base/core/res/res/values/config.xml
@@ -215,27 +215,22 @@
     <!-- The restoring is handled by modem if it is true-->
      <bool name="skip_restoring_network_selection">false</bool>
 
-    <!-- Height of the status bar -->
-    <dimen name="status_bar_height">24dp</dimen>
-    <dimen name="status_bar_height_portrait">32.0dip</dimen>
+ <!-- Height of the status bar -->
+    <dimen name="status_bar_height_portrait">30.0dip</dimen>
 
     <!-- Height of the status bar in landscape -->
-    <dimen name="status_bar_height_landscape">24dp</dimen>
-
-    <!-- The status bar padding before and after icons -->
-    <dimen name="rounded_corner_content_padding">12dp</dimen>
-    <dimen name="rounded_corner_content_padding_alt">12dp</dimen>
+    <dimen name="status_bar_height_landscape">30.0dip</dimen>
 
     <!-- Default radius of the software rounded corners. -->
-    <dimen name="rounded_corner_radius">10.0px</dimen>
+    <dimen name="rounded_corner_radius">12.0px</dimen>
 
     <!-- Radius of the software rounded corners at the top of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
-    <dimen name="rounded_corner_radius_top">10.0px</dimen>
+    <dimen name="rounded_corner_radius_top">12.0px</dimen>
 
     <!-- Radius of the software rounded corners at the bottom of the display in its natural
         orientation. If zero, the value of rounded_corner_radius is used. -->
-    <dimen name="rounded_corner_radius_bottom">10.0px</dimen>
+    <dimen name="rounded_corner_radius_bottom">12.0px</dimen>
 
     <!-- The maximum range of gamma adjustment possible using the screen
          auto-brightness adjustment setting. -->
@@ -423,4 +418,8 @@
          manager will disable alpha trasformation in animations where not
          strictly needed. -->
     <bool name="config_sf_limitedAlpha">true</bool>
+
+    <!-- Disable rounded corners on windows to improve graphics performance -->
+    <bool name="config_supportsRoundedCornersOnWindows">false</bool>
+
 </resources>
